# ssas-tool

./: .gitignore  README.md  clean_bim.py  main.py  pyproject.toml
ssas_tool/: cli.py  ssas_utils.py
